Fixed index overlap

--- a/src/styles/gallery.css
+++ b/src/styles/gallery.css
@@ -10,6 +10,8 @@
     place-items: center;
     height: var(--_gallery-height);
     position: relative;
+    isolation: isolate;
+    z-index: 20;
 }
 
 .accordion {
